application modules and templates

--- a/book_review/templates/layout.html
+++ b/book_review/templates/layout.html
@@ -13,7 +13,7 @@
 <body class="bg-dark">  
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand h3" href="{{ url_for('home') }}">Book review</a>
+            <a class="navbar-brand h3" href="{{ url_for('web.home') }}">Book review</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -21,11 +21,11 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{{ url_for('home') }}">Home</a>
+                    <li class="nav-item {% if request.url_rule.endpoint == 'web.home' %}active{% endif %}">
+                        <a class="nav-link" href="{{ url_for('web.home') }}">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+                    <li class="nav-item {% if request.url_rule.endpoint == 'web.register' %}active{% endif %}">
+                        <a class="nav-link" href="{{ url_for('web.register') }}">Register</a>
                     </li>
 
                 </ul>
@@ -54,8 +54,8 @@
         <div class="container pt-2">
             {% block footer %}
             <div class="row">
-                <div class="col-12">
-                    Footer
+                <div class="col-12 text-center">
+                    Book review - Made with Flask
                 </div>
             </div>
             {% endblock %}
